--- a/style.css
+++ b/style.css
@@ -175,3 +175,26 @@ card-h2 {
     padding: 10px;
 }
 
+/* ---------------------------------------------- */
+footer {
+    padding: 10px;
+    background-color: var(--holdercoltrans);
+
+    font-family: "Roboto", Times, serif;
+    font-size: 0.9rem;
+    color: var(--textcolor);
+    text-align: center;
+
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.9rem;
+
+    border-top: 2px solid var(--themecolor);
+
+}
+
+footer-h1 {
+
+}
