--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
 --white: #f1f0eb;
 --black: #060808;
 
+--red: #ac0d0d;
+--green: #01b637;
+--blue: #0055ff;
+
 }
 
 body{
@@ -80,6 +84,33 @@ input:focus {
     background-color: var(--holdercoltrans);
 }
 
+textarea {
+    color: var(--textcolor);
+    font-family: 'Roboto', Times, serif;
+
+    border-color:#06080800;
+    border-bottom: 2px solid var(--themecolortrans);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+
+    background-color: var(--holdercoltrans);
+    resize: none;
+}
+
+textarea:focus {
+    outline: none;
+    border-color:#06080800;
+    border-bottom: 2px solid var(--themecolor);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+
+    transition: 0.5s;
+
+    background-color: var(--holdercoltrans);
+}
+
 button {
     color: var(--textcolor);
     font-family: 'Roboto', Times, serif;
@@ -106,16 +137,24 @@ a {
 
     border-bottom: 2px solid var(--themecolor);
     margin: 5px;
-    background-color: var(--holdercoltrans);
     border-radius: 5px;
     padding: 5px;    
+
 }
 
 a:hover {
+    border-color: var(--themecoltrans);
     color: var(--themecolor);
     transition: 0.5s;
-    background-color: var(--black);
 
+
+}
+
+a:after {
+    outline: none;
+    border-color: var(--black);
+    color: var(--black);
+    transition: 0.5s;
 }
 
 
@@ -134,6 +173,16 @@ header{
     font-size: 1.5rem;
     color: var(--textcolor);
 }
+
+.logo{
+    float: left;
+    margin: 10px;
+    /* position: absolute; */
+    /* left: 0px; */
+    width: 50px;
+    height: 50px;
+}
+
 /* ---------------------------------------------- */
 
 .holder {
@@ -194,25 +243,60 @@ card-h2 {
 }
 
 /* ---------------------------------------------- */
+
+tag-red {
+    background-color: var(--red);
+    color: var(--textcolor);
+    border-radius: 5px;
+    padding: 5px;
+
+    font-family : 'Roboto', Times, serif;
+    font-size: 1.2rem;
+}
+
+tag-green {
+    background-color: var(--green);
+    color: var(--textcolor);
+    border-radius: 5px;
+    padding: 5px;
+
+    font-family : 'Roboto', Times, serif;
+    font-size: 1.2rem;
+}
+
+tag-blue {
+    background-color: var(--blue);
+    color: var(--textcolor);
+    border-radius: 5px;
+    padding: 5px;
+
+    font-family : 'Roboto', Times, serif;
+    font-size: 1.2rem;
+}
+
+/* ---------------------------------------------- */
 footer {
-    padding: 10px;
-    background-color: var(--holdercoltrans);
 
     font-family: "Roboto", Times, serif;
     font-size: 0.9rem;
     color: var(--textcolor);
     text-align: center;
 
-    position: fixed;
-    bottom: 0;
+    border-top: 2px solid var(--themecolor);
+    border-radius: 10px;
+
+    background-color: var(--holdercolor);
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+
+    /* position: fixed; */
+    /* bottom: 0;
     left: 0;
-    width: 100%;
-    height: 0.9rem;
+    width: 100%; */
+    /* height: 0.9rem; */
 
     border-top: 2px solid var(--themecolor);
 
 }
 
-footer-h1 {
-
-}
