--- a/style.css
+++ b/style.css
@@ -25,12 +25,12 @@ background-color: var(--black);
 
 h1{
 color : var(--textcolor);
-font-family: "Roboto", Times, serif;
+font-family: "Roboto";
 }
 
 h2 {
     color : var(--textcolor);
-    font-family : 'Roboto', Times, serif;
+    font-family: "Roboto";
 }
 
 h3 {
@@ -219,7 +219,7 @@ header{
 card-h1 {
     font-size: 1.5rem;
     margin: 0;
-    font-family : 'Roboto', Times, serif;
+    font-family : "Roboto";
     color: var(--textcolor);
     background-color: var(--holdercoltrans);
     border-radius: 5px;
@@ -236,7 +236,7 @@ card-h1 {
 card-h2 {
     font-size: 1.1rem;
     margin-top: 10px;
-    font-family : 'Roboto', Times, serif;
+    font-family : "Roboto";
     color: var(--textcolor);
     background-color: var(--holdercoltrans);
     border-radius: 5px;
@@ -247,7 +247,7 @@ card-footer{
     margin-top: auto;
     font-size: 1.0rem;
     margin-top: 10px;
-    font-family : 'Roboto', Times, serif;
+    font-family : "Roboto";
     color: var(--textcolor);
     background-color: var(--holdercoltrans);
     border-radius: 5px;
@@ -269,7 +269,7 @@ tag-red {
     border-radius: 5px;
     padding: 5px;
 
-    font-family : 'Roboto', Times, serif;
+    font-family : "Roboto";
     font-size: 1.2rem;
 
     float: left;
@@ -282,7 +282,7 @@ tag-green {
     border-radius: 5px;
     padding: 5px;
 
-    font-family : 'Roboto', Times, serif;
+    font-family : "Roboto";
     font-size: 1.2rem;
     float: left;
     margin-right: 10px;
