--- a/style.css
+++ b/style.css
@@ -27,42 +27,43 @@ background-color: var(--black);
 
 h1{
 color : var(--textcolor);
-font-family: "Roboto";
+font-family: "Montserrat";
 }
 
 h2 {
-    color : var(--textcolor);
-    font-family: "Roboto";
+    color: var(--textcolor);
+    font-family: "Montserrat";
+
 }
 
 h3 {
     color: var(--textcolor);
-    font-family : 'Roboto', Times, serif;
+    font-family : 'Montserrat', Times, serif;
 }
 
 h4 {
     color: var(--textcolor);
-    font-family : 'Roboto', Times, serif;
+    font-family : 'Montserrat', Times, serif;
 }
 
 h5 {
     color: var(--textcolor);
-    font-family : 'Roboto', Times, serif;
+    font-family : 'Montserrat', Times, serif;
 }
 
 h6 {
     color: var(--textcolor);
-    font-family : 'Roboto', Times, serif;
+    font-family : 'Montserrat', Times, serif;
 }
 
 p {
     color: var(--textcolor);
-    font-family : 'Roboto', Times, serif;
+    font-family : 'Montserrat', Times, serif;
 }
 
 input {
     color: var(--textcolor);
-    font-family: 'Roboto', Times, serif;
+    font-family: 'Montserrat', Times, serif;
 
     border-color:#06080800;
     border-bottom: 2px solid var(--themecolortrans);
@@ -77,7 +78,7 @@ input:focus {
     outline: none;
     border-color:#06080800;
     border-bottom: 2px solid var(--themecolor);
-    border-radius: var(--corner10px);
+    border-radius: 10px;
     padding: 10px;
     margin: 10px;
 
@@ -88,7 +89,7 @@ input:focus {
 
 textarea {
     color: var(--textcolor);
-    font-family: 'Roboto', Times, serif;
+    font-family: 'Montserrat', Times, serif;
 
     border-color:#06080800;
     border-bottom: 2px solid var(--themecolortrans);
@@ -104,7 +105,7 @@ textarea:focus {
     outline: none;
     border-color:#06080800;
     border-bottom: 2px solid var(--themecolor);
-    border-radius: var(--corner10px);
+    border-radius: 10px;
     padding: 10px;
     margin: 10px;
 
@@ -115,13 +116,13 @@ textarea:focus {
 
 button {
     color: var(--textcolor);
-    font-family: 'Roboto', Times, serif;
+    font-family: 'Montserrat', Times, serif;
 
     border-color: #06080800;
     border-bottom: 2px solid var(--themecolor);
     margin: 5px;
     background-color: var(--holdercoltrans);
-    border-radius: var(--corner5px);
+    border-radius: 5px;
     padding: 5px;  
 }
 
@@ -134,7 +135,7 @@ button:hover {
 
 select {
     color: var(--textcolor);
-    font-family: 'Roboto', Times, serif;
+    font-family: 'Montserrat', Times, serif;
 
     border-color: #06080800;
     border-bottom: 2px solid var(--themecolor);
@@ -150,7 +151,7 @@ select {
 
 a {
     color: var(--textcolor);
-    font-family: 'Roboto', Times, serif;
+    font-family: 'Montserrat', Times, serif;
     text-decoration: none;
 
     border-bottom: 2px solid var(--themecolor);
@@ -183,11 +184,11 @@ header{
     align-items: center;
     padding: 10px;
     background-color: var(--holdercoltrans);
-    border-radius: 0px;
+    border-radius: 5px;
 
     margin-left: 0px;
 
-    font-family: "Roboto", Times, serif;
+    font-family: "Montserrat", Times, serif;
     font-size: 1.5rem;
     color: var(--textcolor);
 }
@@ -206,7 +207,7 @@ header{
 .holder {
     background-color: var(--holdercolor);
     
-    border-radius: 0px;
+    border-radius: 5px;
     padding: 20px;
     margin: 10px;
 }
@@ -237,7 +238,7 @@ header{
 card-h1 {
     font-size: 1.5rem;
     margin: 0;
-    font-family : "Roboto";
+    font-family : "Montserrat";
     color: var(--textcolor);
     background-color: var(--holdercoltrans);
     border-radius: 5px;
@@ -254,7 +255,7 @@ card-h1 {
 card-h2 {
     font-size: 1.1rem;
     margin-top: 10px;
-    font-family : "Roboto";
+    font-family : "Montserrat";
     color: var(--textcolor);
     background-color: var(--holdercoltrans);
     border-radius: 5px;
@@ -265,7 +266,7 @@ card-footer{
     margin-top: auto;
     font-size: 1.0rem;
     margin-top: 10px;
-    font-family : "Roboto";
+    font-family : "Montserrat";
     color: var(--textcolor);
     background-color: var(--holdercoltrans);
     border-radius: 5px;
@@ -287,7 +288,7 @@ tag-red {
     border-radius: 5px;
     padding: 5px;
 
-    font-family : "Roboto";
+    font-family : "Montserrat";
     font-size: 1.2rem;
 
     float: left;
@@ -300,7 +301,7 @@ tag-green {
     border-radius: 5px;
     padding: 5px;
 
-    font-family : "Roboto";
+    font-family : "Montserrat";
     font-size: 1.2rem;
     float: left;
     margin-right: 10px;
@@ -312,7 +313,7 @@ tag-blue {
     border-radius: 5px;
     padding: 5px;
 
-    font-family : 'Roboto', Times, serif;
+    font-family : 'Montserrat', Times, serif;
     font-size: 1.2rem;
     float: left;
     margin-right: 10px;
@@ -324,7 +325,7 @@ tag-yellow {
     border-radius: 5px;
     padding: 5px;
 
-    font-family : 'Roboto', Times, serif;
+    font-family : 'Montserrat', Times, serif;
     font-size: 1.2rem;
     float: left;
     margin-right: 10px;
@@ -333,7 +334,7 @@ tag-yellow {
 /* ---------------------------------------------- */
 footer {
 
-    font-family: "Roboto", Times, serif;
+    font-family: "Montserrat", Times, serif;
     font-size: 0.9rem;
     color: var(--textcolor);
     text-align: center;
