[+] Header added to Changelogs [/] Updated Vars [/] Updated CSS [/] Changelog Information changed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 --themecolor: #fcba03;
 --themecolortrans: #fcba037e;
 
+--trans: #ffffff00;
+
 --textcolor: #f1f0eb;
 --textinputecol: #ced0d3;
 
@@ -16,9 +18,6 @@
 --red: #ac0d0d;
 --green: #01b637;
 --blue: #0055ff;
-
---corner5px: 5px;
---corner10px: 10px;
 }
 
 body{
@@ -31,9 +30,8 @@ font-family: "Montserrat";
 }
 
 h2 {
-    color: var(--textcolor);
+    color : var(--textcolor);
     font-family: "Montserrat";
-
 }
 
 h3 {
@@ -103,7 +101,7 @@ textarea {
 
 textarea:focus {
     outline: none;
-    border-color:#06080800;
+    border-color:var(--trans);
     border-bottom: 2px solid var(--themecolor);
     border-radius: 10px;
     padding: 10px;
@@ -185,6 +183,9 @@ header{
     padding: 10px;
     background-color: var(--holdercoltrans);
     border-radius: 5px;
+    border-bottom: 2px solid #fcba03;
+    
+
 
     margin-left: 0px;
 
@@ -222,18 +223,42 @@ header{
     margin-inline: auto;
 }
 
-.card {
+/* .card {
+    margin: 20px;
+    border-radius: 5px;
+    padding: 10px;
+    width: 500px;
+    height: 360px;
+    display: flex;
+
+    flex-direction: column;
+    border: 2px solid var(--holdercoltrans);
+} */
+.card{
     margin: 20px;
     background-color: var(--holdercolor);
     border-radius: 5px;
     padding: 10px;
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 360px;
     display: flex;
 
     flex-direction: column;
     border: 2px solid var(--holdercoltrans);
 }
+
+/* .devcard {
+    margin: 20px;
+    border-radius: 5px;
+    padding: 10px;
+    width: 500px;
+    height: 360px;
+    display: flex;
+
+    flex-direction: column;
+    border: 2px solid var(--holdercoltrans);
+} */
+
 
 card-h1 {
     font-size: 1.5rem;
@@ -253,7 +278,7 @@ card-h1 {
 }
 
 card-h2 {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     margin-top: 10px;
     font-family : "Montserrat";
     color: var(--textcolor);
@@ -263,21 +288,73 @@ card-h2 {
 }
 
 card-footer{
+    position: relative;
+    bottom: 0;
     margin-top: auto;
     font-size: 1.0rem;
-    margin-top: 10px;
+
     font-family : "Montserrat";
     color: var(--textcolor);
     background-color: var(--holdercoltrans);
     border-radius: 5px;
     padding: 10px;
 
-    border: #f1f0eb00;
+    border: var(--trans);
     border-bottom: var(--themecolor);
     border-style: solid;
     border-width: 2px;
     border-radius: 5px;
 
+
+
+
+
+}
+
+/* .card-button{
+    margin-top: auto;
+    font-size: 1.0rem;
+    margin-top: 10px;
+    background-color: var(--holdercoltrans);
+    border-radius: 5px;
+    padding: 10px;
+
+    border: #f1f0eb00;
+    border-bottom: var(--themecolor);
+    border-top: var(--themecolor);
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 5px;
+
+}
+
+.cardbutton:hover{
+    color: var(--black);
+    transition: 0.5s;
+    cursor: pointer;
+} */
+
+.card-redirect{
+    margin:auto;
+    font-size: 1.0rem;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 2px;
+    margin-top: 10px;
+
+    border-color: #f1f0eb00;
+
+    border-bottom: 2px solid var(--themecolor);
+    border-radius: 5px; 
+    background-color: var(--holdercoltrans);
+    
+}
+
+.card-redirect:hover{
+    transition: 0.5s;
+    cursor: pointer;
+
+    background-color: var(--themecolortrans);
 }
 
 /* ---------------------------------------------- */
@@ -320,7 +397,7 @@ tag-blue {
 }
 
 tag-yellow {
-    background-color: var(--themecolor);
+    background-color: var(--themecolortrans);
     color: var(--textcolor);
     border-radius: 5px;
     padding: 5px;
@@ -378,3 +455,12 @@ footer {
     /* height: 0.9rem; */
 
 }
+
+
+img{
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+/* ---------------------------------------------- */
