--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* textcolor = #ced0d3 */
 
 :root{
 --themecolor: #fcba03;
@@ -24,9 +23,16 @@ body{
 background-color: var(--black);
 }
 
+h1-header{
+    color : var(--textcolor);
+    font-family: "Montserrat";
+    margin-left: 25px;
+    font-size: x-large;
+}
+
 h1{
-color : var(--textcolor);
-font-family: "Montserrat";
+    color : var(--textcolor);
+    font-family: "Montserrat";
 }
 
 h2 {
@@ -65,7 +71,7 @@ input {
 
     border-color:#06080800;
     border-bottom: 2px solid var(--themecolortrans);
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 10px;
     margin: 10px;
 
@@ -91,7 +97,7 @@ textarea {
 
     border-color:#06080800;
     border-bottom: 2px solid var(--themecolortrans);
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 10px;
     margin: 10px;
 
@@ -151,6 +157,8 @@ a {
     color: var(--textcolor);
     font-family: 'Montserrat', Times, serif;
     text-decoration: none;
+    background-color: var(--holdercoltrans);
+
 
     border-bottom: 2px solid var(--themecolor);
     margin: 5px;
@@ -163,6 +171,8 @@ a:hover {
     border-color: var(--themecoltrans);
     color: var(--themecolor);
     transition: 0.5s;
+
+    background-color: var(--themecolortrans);
 
 
 }
@@ -195,10 +205,11 @@ header{
 }
 
 .logo{
-    float: left;
-    margin: 10px;
-    /* position: absolute; */
-    /* left: 0px; */
+    /* float: left;
+    margin: 10px; */
+    position: absolute;
+    left: 25px;
+    top: 19px;
     width: 50px;
     height: 50px;
 }
@@ -464,3 +475,7 @@ img{
 }
 
 /* ---------------------------------------------- */
+/* CUSTOM CSS UNDER THIS LINE */
+/* ---------------------------------------------- */
+
+
